force-app/main/default/objects/kwebsitepage__c/kwebsitepage__c.object-meta.xml
<CustomObject>
    <label>kwebsitepage</label>
    <nameField>
        <displayFormat>SITE-{0000}</displayFormat>
        <label>kwebsitepage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>kwebsitepages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>