force-app/main/default/objects/kwebsitepage__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>