force-app/main/default/objects/kwebsitepage__c/fields/kwebsite__c.field-meta.xml
<CustomField>
    <fullName>kwebsite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>kwebsite</label>
    <referenceTo>kwebsite__c</referenceTo>
    <relationshipLabel>kwebsitepages</relationshipLabel>
    <relationshipName>kwebsitepages</relationshipName>
    <type>Lookup</type>
</CustomField>