force-app/main/default/objects/kwebsitepage__c/fields/Number_of_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Page_Views__c</fullName>
    <label>Number of Page Views</label>
    <summaryFilterItems>
        <field>kwebsitepage_track__c.UseType__c</field>
        <operation>equals</operation>
        <value>Pageview</value>
    </summaryFilterItems>
    <summaryForeignKey>kwebsitepage_track__c.kwebsitepage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>