force-app/main/default/objects/kwebsitepage__c/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>sku</label>
    <length>40</length>
    <type>Text</type>
</CustomField>