force-app/main/default/objects/kwebsitepage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>kwebsite__c</columns>
    <columns>Number_of_Article_Views__c</columns>
    <columns>Number_of_Page_Views__c</columns>
    <columns>Number_of_SnapIn_Clicks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>