force-app/main/default/objects/kwebsitepage__c/listViews/Opencart.listView-meta.xml
<ListView>
    <fullName>Opencart</fullName>
    <columns>Title__c</columns>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>Number_of_Article_Views__c</columns>
    <columns>Number_of_Page_Views__c</columns>
    <columns>Number_of_SnapIn_Clicks__c</columns>
    <columns>category__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL__c</field>
        <operation>contains</operation>
        <value>trailstore</value>
    </filters>
    <label>OpenCart</label>
    <language>en_US</language>
</ListView>